# apple-news-readwise-scraper

./: .env.example  .gitignore  .gitleaksignore  LICENSE  README.md  SECURITY.md  com.applenews-readwise.watcher.plist.template  generate_flow_diagram.py  install.sh  news_cache.py  news_launcher.sh  news_watcher_daemon.py  probe_news_cache.command  probe_news_cache.py  pyproject.toml  run.sh  run_scraper.scpt  run_watcher.command  scrape_current_article.py  scrape_to_readwise.py  search_news_cache.py  test_news_cache.py  test_retry_logic.py  test_token_fallback.py  watch_likes.py  watcher_hidden.command
